SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subcription_Settings__c/DealHub_Subcription_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DealHub Subscription Settings</label>
</CustomObject>