SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subcription_Settings__c/fields/DealHub_Manage_Subscription_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Manage_Subscription_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Manage Subscription Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>