SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subcription_Settings__c/fields/DealHub_Opportunity_Line_Filter__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Opportunity_Line_Filter__c</fullName>
    <defaultValue>&apos;Product2.DealHub_Is_Renewable__c = true&apos;</defaultValue>
    <label>Opportunity Line Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>