SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subcription_Settings__c/fields/DealHub_Subscription_Line_Threshold__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Subscription_Line_Threshold__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Maximum subscription lines that will be process in immediate transaction, above this number the process will schedule future process.</description>
    <inlineHelpText>Maximum subscription lines that will be process in immediate transaction, above this number the process will schedule future process.</inlineHelpText>
    <label>Subscription Line Threshold</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>